@startuml LegacyMotorsModel

!define Table(name, fields) class name
!define primary_key(x) <b>x</b>

Table(Customer, customer) {
    primary_key(customer_id): int
    --
    email: string
    name: string
    surname: string
    phone: string
    address: string
    dni: string
    login: Login
    reservations[]: Reservation
    invoices[]: Invoice
}

Table(Employee, employee) {
  primary_key(admin_id): int
  --
  name: string
  surname: string
  login: Login
  email: string
  phone: string
  position: string
  hire_date: date
  salary: decimal
}

Table(Provider, provider) {
    primary_key(provider_id): int
    --
    name: string
    email: string
    dni: string
    cif: string
    address: string
    vehicles[]: Vehicle
}

Table(Login, login) {
  primary_key(login_id): int
  --
  username: string
  password: string
  role: string
}

Table(Vehicle, vehicle) {
    primary_key(vehicle_id): int
    --
    plate: string
    fuel: string
    color: string
    price_per_day: decimal
    available: boolean
    doors: int
    capacity: int
    transmission: string
    description: string
    category: string
    brand: Brand
    provider: Provider
    images[]: Image
    reservations[]: Reservation
}

Table(Brand, brand) {
    primary_key(brand_id): int
    --
    name: string
    models[]: Model
}

Table(Model, model) {
    primary_key(model_id): int
    --
    name: string
    description: string
    year: int
}

Table(Reservation, reservation) {
    primary_key(reservation_id): int
    --
    start_date: date
    end_date: date
    total_price: int
    status: string
    payment_details: Payment_Details
    reviews[]: Review
    vehicle: Vehicle
    invoice: Invoice
    reservation_date: date
}

Table(Payment_Details, payment_details) {
    primary_key(payment_id): int
    --
    payment_method: string
    card_number: string
    expiry_date: date
    cvv: string
}

Table(Review, review) {
    primary_key(review_id): int
    --
    rating: int
    comment: string
    date: date
}

Table(Image, image) {
    primary_key(image_id): int
    --
    file_name: string
    vehicle: Vehicle
}

Table(Invoice, invoice) {
    primary_key(invoice_id): int
    --
    number: string
    price: float
    date: date
    customer: Customer
    reservation: Reservation
}

Customer "1" -- "1" Login
Employee "1" -- "1" Login
Provider "1" -- "N" Vehicle
Vehicle "N" -- "1" Brand
Vehicle "N" -- "1" Model
Brand "1" -- "N" Model
Reservation "N" -- "1" Customer
Reservation "1" -- "1" Payment_Details
Reservation "1" -- "N" Review
Vehicle "1" -- "N" Reservation
Image "N" -- "1" Vehicle
Invoice "N" -- "1" Customer
Reservation "N" -- "1" Invoice
Review "N" -- "1" Customer
Customer "1" -- "N" Payment_Details

@enduml
